infra/istio/charts/temlpates/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-virtual-service
  namespace: app
spec:
  hosts:
    - "*"
  gateways:
    - nginx-gateway
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: nginx-service.nginx.svc.cluster.local
  port:
    number: 8080
